import org.springframework.boot.gradle.plugin.SpringBootPlugin

plugins {
    id 'java'
    id 'war'
    id 'jacoco'
    id 'io.freefair.lombok' version '5.3.3.3'
    id 'org.asciidoctor.jvm.convert' version '3.3.2'
    id 'maven-publish'
    id 'signing'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'org.springframework.boot' version '3.0.0' apply false
    id 'org.sonarqube' version '3.3'
}

group = 'com.toedter'
version = '2.0.0-SNAPSHOT'
sourceCompatibility = '1.17'

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/release' }
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

configurations {
    docs
}

dependencyManagement {
    imports {
        mavenBom SpringBootPlugin.BOM_COORDINATES
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    implementation 'org.atteo:evo-inflector:1.2.2'

    providedCompile 'com.google.code.findbugs:jsr305:3.0.2'
    providedCompile 'jakarta.servlet:jakarta.servlet-api'

    testImplementation 'org.springframework:spring-test'
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.springframework:spring-webmvc'
    testImplementation 'org.springframework:spring-webflux'
    testImplementation 'org.slf4j:slf4j-api'
    testImplementation 'org.slf4j:jcl-over-slf4j'
    testImplementation 'ch.qos.logback:logback-classic'
    testImplementation 'org.assertj:assertj-core'
    testImplementation 'org.hamcrest:hamcrest-library'
    testImplementation 'jakarta.persistence:jakarta.persistence-api'
    testImplementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    testImplementation 'com.networknt:json-schema-validator:1.0.73'

    docs 'io.spring.asciidoctor.backends:spring-asciidoctor-backends:0.0.3'
}

test {
    useJUnitPlatform()
    testLogging.showStandardStreams = true
    finalizedBy jacocoTestReport
}

jar {
    archivesBaseName = 'spring-hateoas-jsonapi'
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
    }
    afterEvaluate {
        getClassDirectories().setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: ['**/Jackson2JsonApiModule\$**Mixin*', '**/AbstractJsonApiSerializer**'])
        }))
    }
}

tasks.register('doc') {
    dependsOn asciidoctor
    dependsOn javadoc

    doLast {
        copy {
            from "$buildDir/docs/javadoc"
            into "$buildDir/docs/gh-pages/snapshot/api"
            filter { line -> line.replaceAll('lib', 'JSON:API for Spring HATEOAS') }
        }

        copy {
            from "$buildDir/docs/asciidoc"
            into "$buildDir/docs/gh-pages/snapshot/reference"
        }
    }
}

asciidoctor {
    configurations 'docs'
    sourceDir 'src/main/asciidoc/'
    baseDirFollowsSourceFile()
    attributes 'version': "${project.version}", 'fold': 'tags'
    outputOptions {
        backends 'spring-html'
    }
}

java {
    withJavadocJar()
    withSourcesJar()
}

javadoc {
    options.overview = 'src/main/javadoc/overview.html'
    exclude 'org/springframework/hateoas/mediatype/hal/forms/**'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifactId = 'spring-hateoas-jsonapi'
            from components.java

            pom {
                name = 'JSON:API for Spring HATEOAS'
                description = 'Implementation of the media type application/vnd.api+json (JSON:API) to be integrated in Spring HATEOAS.'
                url = 'https://github.com/toedter/spring-hateoas-jsonapi'
                licenses {
                    license {
                        name = 'The Apache License, Version 2.0'
                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                    }
                }
                developers {
                    developer {
                        id = 'toedter'
                        name = 'Kai Toedter'
                        email = 'kai@toedter.com'
                    }
                }
                scm {
                    url = 'https://github.com/toedter/spring-hateoas-jsonapi.git'
                }
            }
        }
    }
    repositories {
        maven {
            credentials {
                username System.getenv('OSSRH_USERNAME')
                password System.getenv('OSSRH_PASSWORD')
            }
            if (project.version.endsWith('-SNAPSHOT')) {
                url 'https://oss.sonatype.org/content/repositories/snapshots/'
            } else {
                url 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
            }
        }
    }
}

// we don't publish the gradle module metadata
tasks.withType(GenerateModuleMetadata).configureEach {
    enabled = false
}

signing {
    def signingKey = findProperty('signingKey')
    def signingPassword = findProperty('signingPassword')
    useInMemoryPgpKeys(signingKey as String, signingPassword as String)
    sign publishing.publications.mavenJava
}

sonarqube {
    properties {
        property 'sonar.projectName', 'JSON:API for Spring HATEOAS'
        property 'sonar.projectKey', 'toedter_spring-hateoas-jsonapi'
        property 'sonar.organization', 'toedter'
        property 'sonar.host.url', 'https://sonarcloud.io'
    }
}
